# OpenQbo

./: LICENSE  README.md
julius_grammar_compiler/: README  gen_grammar.py
qbo_android_app/: AndroidManifest.xml  README.md
qbo_arduino/: README
qbo_arduqbo/: Authors  CMakeLists.txt  README  control  default.yaml  default_dynamixel.yaml  default_with_sensors.yaml  default_with_sensors_dynamixel.yaml  dynamixel_joint_controllers.yaml  mainpage.dox  manifest.xml
qbo_arduqbo/include/: dynamixel.h  myXmlRpc.h  qbo_arduqbo.h  servos.h
qbo_arduqbo/include/controllers/: base_controller.h  battery_controller.h  controllers_class.h  floor_controller.h  imu_controller.h  infra_red_recievers_controller.h  joint_controller.h  lcd_controller.h  mics_controller.h  mouth_controller.h  nose_controller.h  srf10_controller.h
qbo_arduqbo/include/driver/: arduqbo_instructions.h  dataUnion.h  qboduino_driver.h
qbo_arduqbo/launch/: qbo.launch  qbo_dynamixel.launch  qbo_dynamixel_with_sensors.launch  qbo_with_sensors.launch
qbo_arduqbo/msg/: BatteryLevel.msg  Expression.msg  EyesPositions.msg  HeadPose.msg  Irs.msg  LCD.msg  Mic.msg  Mouth.msg  NoiseLevels.msg  Nose.msg  motor_state.msg
qbo_arduqbo/src/: controllerGUI.py  lib_qbo_pyarduqbo.py  qbo_arduqbo.cpp  servos.cpp
qbo_arduqbo/src/controllers/: base_controller.cpp  battery_controller.cpp  floor_controller.cpp  imu_controller.cpp  infra_red_recievers_controller.cpp  joint_controller.cpp  lcd_controller.cpp  mics_controller.cpp  mouth_controller.cpp  nose_controller.cpp  srf10_controller.cpp
qbo_arduqbo/src/driver/: arduqbo_instructions.cpp  qboduino_driver.cpp
qbo_arduqbo/src/dynamixel_sdk/: ReleaseNote.txt
qbo_arduqbo/src/dynamixel_sdk/example/ReadWrite/: Makefile  ReadWrite  ReadWrite.c
qbo_arduqbo/src/dynamixel_sdk/example/SyncWrite/: Makefile  SyncWrite.c
qbo_arduqbo/src/dynamixel_sdk/src/: dxl_hal.c  dxl_hal.h  dynamixel.c
qbo_arduqbo/src/qbo_arduqbo/msg/: _BatteryLevel.py  _Expression.py  _EyesPositions.py  _HeadPose.py  _Irs.py  _LCD.py  _Mic.py  _Mouth.py  _NoiseLevels.py  _Nose.py  __init__.py  _motor_state.py
qbo_arduqbo/src/qbo_arduqbo/srv/: _BaseStop.py  _Test.py  _TorqueEnable.py  __init__.py
qbo_arduqbo/srv/: BaseStop.srv  Test.srv  TorqueEnable.srv
qbo_audio_control/: Authors  CMakeLists.txt  LICENSES  README  control  manifest.xml
qbo_audio_control/Dependencies/: README
qbo_brain/: .gitignore  AUTHORS  README  control  manifest.xml
qbo_camera/: CMakeLists.txt  README  control  mainpage.dox  manifest.xml
qbo_cereal_port/: README  control  manifest.xml
qbo_expression/: README.md  howToUseExpressions  mainpage.dox  manifest.xml
qbo_face_vision/: .gitignore  README  control  postinst  stack.xml
qbo_http_api_login/: .gitignore  AUTHORS  README  manifest.xml
qbo_internet_services/: .gitignore  CMakeLists.txt  README  manifest.xml
qbo_launchers/: README  control  manifest.xml  postinst  postrm  qbo_start_service
qbo_linphone/: .gitignore  Authors  README  control  manifest.xml
qbo_listen/: .gitignore  Authors  CMakeLists.txt  JULIUS-LICENSE  LICENSE  README  manifest.xml
qbo_mjpeg_server/: CMakeLists.txt  manifest.xml
qbo_music_player/: AUTHORS  CMakeLists.txt  README  control  mainpage.dox  manifest.xml
qbo_music_player/config/lang/: en.txt  es.txt
qbo_music_player/launch/: hand_gesture_calib.launch  hand_gesture_node.launch
qbo_music_player/src/: Orbit.cpp  Orbit.h  OrbitObject.cpp  OrbitObject.h  hand_gesture_calib.cpp  hand_gesture_node.cpp  music_master.py  syscall.py
qbo_object_recognition/: AUTHORS  CMakeLists.txt  README  control  mainpage.dox  manifest.xml  postinst
qbo_questions/: Authors  README  manifest.xml
qbo_random_move/: AUTHORS  README  control  mainpage.dox  manifest.xml
qbo_say_ip/: Authors  LICENSES  README  control  manifest.xml
qbo_self_recognizer/: CMakeLists.txt  LICENSES  README  control  mainpage.dox  manifest.xml
qbo_stereo_anaglyph/: .gitignore  control
qbo_stereo_selector/: CMakeLists.txt  control  mainpage.dox  manifest.xml
qbo_system_info/: Authors  LICENSES  README  control  manifest.xml
qbo_talk/: .gitignore  Authors  README  control  manifest.xml  postinst
qbo_video_record/: .gitignore  CMakeLists.txt  README  control  manifest.xml
qbo_webi/: .gitignore  AUTHORS  LICENSES  README  control  manifest.xml  postinst
(+437 files in other folders)
